# sitpath-evaluation

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
configs/eth_ucy/: coord_gru.yaml  coord_transformer.yaml  raster_gru.yaml  sitpath_gru.yaml  sitpath_transformer.yaml  social_lstm.yaml
configs/nuscenes_mini/: coord_gru.yaml  coord_transformer.yaml  raster_gru.yaml  sitpath_gru.yaml  sitpath_transformer.yaml  social_lstm.yaml
configs/sdd_mini/: coord_gru.yaml  coord_transformer.yaml  raster_gru.yaml  sitpath_gru.yaml  sitpath_transformer.yaml  social_lstm.yaml
notebooks/: 00_colab_setup.ipynb  01_precompute_tokens.ipynb  02_train_models.ipynb  03_eval_and_tables.ipynb  04_controllability.ipynb  05_ablation_and_interpretability.ipynb
scripts/: ablation_run.py  controllability_edit.py  evaluate.py  precompute_tokens.py  train.py
sitpath_eval/: config.py
sitpath_eval/data/: __init__.py  common.py  download_eth_ucy.sh  download_nuscenes_mini.md  download_sdd_mini.sh  eth_ucy.py  nuscenes_mini.py  sdd_mini.py
sitpath_eval/evaluation/: __init__.py  eval_ablation.py  eval_controllability.py  eval_core.py  eval_data_efficiency.py  eval_generalization.py
sitpath_eval/models/: __init__.py  coord_gru.py  coord_transformer.py  raster_gru.py  sitpath_gru.py  sitpath_transformer.py  social_lstm.py
sitpath_eval/tables_figs/: make_figs.py  make_tables.py
sitpath_eval/tokenizer/: __init__.py  inverse_decoder.py  sitpath_tokenizer.py  vocab_tools.py
sitpath_eval/training/: __init__.py  loops.py  losses.py  metrics.py  sampling.py  schedulers.py
(+15 files in other folders)
