[metadata]
name = sitpath-eval
version = 0.1.0
description = Evaluation suite for SitPath
author = Your Name
license = MIT
url = https://github.com/azsanche-asg/sitpath-evaluation

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    torch>=2.1
    torchvision
    torchaudio
    tqdm
    pyyaml
    einops
    opencv-python
    scikit-learn
    loguru

[flake8]
max-line-length = 99
extend-ignore = E203,W503

[isort]
profile = black
